realtor-agentic-ai/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realtor-agentic-ai-ingress
spec:
  rules:
    - host: realtor-agent.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realtor-agentic-ai-service
                port:
                  number: 80
